--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,14 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
-  "version": "0.0.0"
+  "version": "independent",
+  "command": {
+    "version": {
+      "conventionalCommits": true,
+      "message": "chore(release): publish [skip ci]",
+      "allowBranch": ["main"],
+      "ignore": ["**/*.md", "**/*.yaml", "**/*.yml", "**/*.stories.js"]
+    }
+  }
+
 }
