--- a/lerna.json
+++ b/lerna.json
@@ -1,14 +1,20 @@
 {
   "$schema": "node_modules/lerna/schemas/lerna-schema.json",
   "useWorkspaces": true,
-  "version": "0.0.0",
+  "version": "1.0.1",
   "command": {
     "version": {
       "conventionalCommits": true,
       "message": "chore(release): publish [skip ci]",
-      "allowBranch": ["main"],
-      "ignore": ["**/*.md", "**/*.yaml", "**/*.yml", "**/*.stories.js"]
+      "allowBranch": [
+        "main"
+      ],
+      "ignore": [
+        "**/*.md",
+        "**/*.yaml",
+        "**/*.yml",
+        "**/*.stories.js"
+      ]
     }
   }
-
 }
