--- a/packages/hello2/package.json
+++ b/packages/hello2/package.json
@@ -7,5 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "0f9d79083afadc13243e76b324753469a7082873"
 }
